display all books information

--- a/styles/assets.css
+++ b/styles/assets.css
@@ -1,4 +1,8 @@
-button {
+.submit_button {
     width: 24px;
-    height: 24px;
+    height: 25.5px;
+}
+
+button {
+    background-color: #2b3d4f;
 }
