--- a/styles/header.css
+++ b/styles/header.css
@@ -4,6 +4,9 @@
   justify-content: space-evenly;
   padding: 16px;
   gap: 24px;
+  height: 120px;
+  max-width: 1920px;
+  margin: auto;
 }
 .header img {
   width: 40px;
@@ -11,6 +14,6 @@
 }
 .header_bg {
     width: 100dvw;
-    height: 96px;
+    height: 120px;
     background-color: #06252E;
 }
