--- a/styles/standard.css
+++ b/styles/standard.css
@@ -8,8 +8,9 @@ body{
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
   height: 100dvh;
-  max-width: 1920px;
   background-color: #041721;
   color: white;
+  font-family: 'Arial', sans-serif;
 }
