--- a/style.css
+++ b/style.css
@@ -6,3 +6,9 @@
     padding-top: 40px;
     max-width: 1920px;
 }
+
+@media screen and (max-width: 490px) {
+    .full_content {
+        padding-top: 8px;
+    }
+}
